[gd_scene load_steps=4 format=3 uid="uid://brjwhjf4tox5o"]

[ext_resource type="Script" path="res://scenes/UI/resource_box/resource_box.gd" id="1_nvlgj"]
[ext_resource type="PackedScene" uid="uid://dbykxbrrbk685" path="res://scenes/UI/drag_preview/drag_preview.tscn" id="2_8owgi"]
[ext_resource type="Texture2D" uid="uid://cucmglk7nin4i" path="res://assets/visuals/items/purplepotion.png" id="3_n6ek6"]

[node name="ResourceBox" type="PanelContainer"]
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
size_flags_horizontal = 4
script = ExtResource("1_nvlgj")
drag_preview_instance = ExtResource("2_8owgi")

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 8
text = "x1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="TextureRect" type="TextureProgressBar" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("3_n6ek6")
texture_progress = ExtResource("3_n6ek6")
tint_under = Color(1, 1, 1, 0.196078)
